--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App {
+   max-width: 600px;
+   margin: 1rem auto;
+   border: 10px solid #d00000;
+   padding: 1rem;
+   background-color: #ffba08;
+   border-radius: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  .App>h1{
+    margin-top: 0;
+    color: #370617;
+    }
+  
+  @media screen and (max-width:600px) {
+    .App {   
+      margin: 1rem 1rem;
+     }
   }
-}
+  
+  input.New-todo
+  {
+    display: block;
+    width: 100%;
+    padding: .5rem;
+    font-size: 1.2rem ;
+    border: 3px solid #6a040f;
+    border-radius: .5rem;
+  }
+
+  input.New-todo:focus
+  {
+    outline: none;
+  }
+  
+  ul.App-todos{
+    list-style: none;
+    padding: 0;
+    font-size: 1.2rem;
+  }
+
+  ul.App-todos>li{
+  padding: .5rem;
+  }
+  
+  li.Todo-item{
+    display: flex;
+    align-items: center;
+  
+  }
+  li.Todo-item:hover{
+  background-color: rgba(255, 255, 255, .5);
+  }
+  
+  a.Todo-delete{
+    margin-left: auto;
+    text-decoration: none;
+    color: #6a040f;
+    font-size: 2rem;
+    line-height: 1.2rem;
+  }
+  .Done > .Todo-title{
+    text-decoration: line-through;
+  }
